Refactor session fixtures and integration tests; remove unused methods and entities